--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,9 @@
 		// don't set path explicitly but rely on `python -m pylint` working so that
 		// it finds pylint in currently active virtualenv
 		// https://stackoverflow.com/questions/60030017/vscode-path-to-the-pylint-linter-is-invalid
-		// "python.linting.pylintPath": "/usr/local/py-utils/bin/pylint"
+		// "python.linting.pylintPath": "/usr/local/py-utils/bin/pylint",
+		"editor.bracketPairColorization.enabled": true,
+		"editor.guides.bracketPairs":"active",
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
