--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -56,7 +56,7 @@
 	"remoteUser": "vscode"
 =======
 	"postStartCommand": [ 
-		"/usr/local/py-utils/bin/poetry config virtualenvs.in-project true"
+		"poetry config virtualenvs.in-project true"
 	],
 	"runArgs": ["--userns=keep-id:uid=1000,gid=1000"],
     "containerUser": "vscode",
