--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
 				"tamasfe.even-better-toml",
 				"davidanson.vscode-markdownlint",
 				"redhat.vscode-yaml",
-				"bierner.markdown-mermaid"				
+				"bierner.markdown-mermaid",
+				"gruntfuggly.todo-tree"				
             ]
         }
     },
