--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ mike = "^1.1.2"
 mypy = "^0.910"
 class-doc = "^0.2.6"
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.7.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
