--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,10 @@
 				"davidanson.vscode-markdownlint",
 				"redhat.vscode-yaml",
 				"bierner.markdown-mermaid",
-				"gruntfuggly.todo-tree"
+				"gruntfuggly.todo-tree",
+				"ms-python.black-formatter",
+				"ms-python.autopep8",
+				"stkb.rewrap"
 			]
 		}
 	},
