--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,9 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
+    "black-formatter.args": ["--line-length", "120"],
+    "autopep8.args": ["--line-length", "120"],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+    },
 }
