--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,10 @@
 				"gruntfuggly.todo-tree",
 				"ms-python.black-formatter",
 				"ms-python.autopep8",
-				"stkb.rewrap"
+				"stkb.rewrap",
+				"github.copilot",
+				"github.copilot-chat",
+				"github.copilot-labs"
 			]
 		}
 	},
