--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,6 @@ toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 poethepoet = "^0.11.0"
-pylint = "^2.12.2"
-black = "^21.11b1"
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
 pytest-html = "^3.1.1"
@@ -34,8 +32,15 @@ mike = "^1.1.2"
 mypy = "^0.910"
 class-doc = "^0.2.6"
 
-[tool.poetry.group.dev.dependencies]
-black = "^23.7.0"
+[tool.ruff]
+# Set the maximum line length to 79.
+line-length = 120
+
+[tool.ruff.lint]
+# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
+# overlap with the use of a formatter, like Black, but we can override this behavior by
+# explicitly adding the rule.
+extend-select = ["E501"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -56,34 +61,6 @@ source = [ "pyconfme" ]
 
 [tool.coverage.run]
 omit = [ "tests/*", ".venv/*" ]
-
-[tool.pylint.FORMAT]
-max-line-length = 120
-
-[tool.black]
-experimental-string-processing = true
-line-length = 88
-target-version = ['py39']
-include = '\.pyi?$'
-exclude = '''
-
-(
-  /(
-      \.eggs         # exclude a few common directories in the
-    | \.git          # root of the project
-    | \.hg
-    | \.mypy_cache
-    | \.tox
-    | \.venv
-    | _build
-    | buck-out
-    | build
-    | dist
-  )/
-  | foo.py           # also separately exclude a file named foo.py in
-                     # the root of the project
-)
-'''
 
 [tool.poe.env]
 _VERSION = "v0.0.0"
